# encode_decode

./: .gitignore  index.html  main.py  mkdocs.yml  pyproject.toml  readme.md
docs/: index.md  tutorials.md
site/: 404.html  objects.inv
site/tutorials/: index.html
src/: algorithms.py  commands.py  core.py  documentation.py  encoding.py  hashing.py
